[tool.poetry]
name = "tweetqueuebackend"
version = "0.1.0"
description = ""
authors = ["Chris Behan <behan@hey.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
requests = "^2.25.1"
flask-cors = "^3.0.10"
TwitterAPI = "^2.6.5"
requests-oauthlib = "^1.3.0"
replit = "^2.0.0"
pytest = "^6.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
